compiler/tests/snapshots/lexer_snapshot__lex_arithmetic_expr.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (Identifier("a"), Span(
    start: 0,
    end: 1,
  )),
  (Plus, Span(
    start: 2,
    end: 3,
  )),
  (Identifier("b"), Span(
    start: 4,
    end: 5,
  )),
  (Star, Span(
    start: 6,
    end: 7,
  )),
  (Identifier("c"), Span(
    start: 8,
    end: 9,
  )),
  (Eof, Span(
    start: 9,
    end: 9,
  )),
]
