compiler/tests/snapshots/lexer_snapshot__lex_block_comment.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (IntLiteral((42, None)), Span(
    start: 11,
    end: 13,
  )),
  (Eof, Span(
    start: 13,
    end: 13,
  )),
]
