compiler/tests/snapshots/lexer_snapshot__lex_bool_literals.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (BoolLiteral(true), Span(
    start: 0,
    end: 4,
  )),
  (BoolLiteral(false), Span(
    start: 5,
    end: 10,
  )),
  (Eof, Span(
    start: 10,
    end: 10,
  )),
]
