compiler/tests/snapshots/lexer_snapshot__lex_bool_ops.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (Identifier("a"), Span(
    start: 0,
    end: 1,
  )),
  (And, Span(
    start: 2,
    end: 5,
  )),
  (Identifier("b"), Span(
    start: 6,
    end: 7,
  )),
  (Or, Span(
    start: 8,
    end: 10,
  )),
  (Not, Span(
    start: 11,
    end: 14,
  )),
  (Identifier("c"), Span(
    start: 15,
    end: 16,
  )),
  (Eof, Span(
    start: 16,
    end: 16,
  )),
]
