compiler/tests/snapshots/lexer_snapshot__lex_char_literal.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (CharLiteral('a'), Span(
    start: 0,
    end: 3,
  )),
  (Eof, Span(
    start: 3,
    end: 3,
  )),
]
