compiler/tests/snapshots/lexer_snapshot__lex_comparison.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (Identifier("x"), Span(
    start: 0,
    end: 1,
  )),
  (GtEq, Span(
    start: 2,
    end: 4,
  )),
  (IntLiteral((10, None)), Span(
    start: 5,
    end: 7,
  )),
  (Eof, Span(
    start: 7,
    end: 7,
  )),
]
