compiler/tests/snapshots/lexer_snapshot__lex_float_literal.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (FloatLiteral(3.14), Span(
    start: 0,
    end: 4,
  )),
  (Eof, Span(
    start: 4,
    end: 4,
  )),
]
