compiler/tests/snapshots/lexer_snapshot__lex_integer_literal.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (IntLiteral((42, None)), Span(
    start: 0,
    end: 2,
  )),
  (Eof, Span(
    start: 2,
    end: 2,
  )),
]
