compiler/tests/snapshots/lexer_snapshot__lex_string_literal.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: tokens
---
[
  (StringLiteral("hello"), Span(
    start: 0,
    end: 7,
  )),
  (Eof, Span(
    start: 7,
    end: 7,
  )),
]
