compiler/tests/snapshots/lexer_snapshot__lex_unknown_char.snap
---
source: compiler/tests/lexer_snapshot.rs
expression: errors
---
[
  LexError(
    span: Span(
      start: 0,
      end: 1,
    ),
    message: "unexpected character \'$\'",
  ),
]
